--- a/diancixiansheng.plist
+++ b/diancixiansheng.plist
@@ -22,9 +22,9 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>releaseNotes</key>
-                <string>在线安装电池先生</string>
+                <string>电池先生</string>
                 <key>title</key>
-                <string>在线安装电池先生</string>
+                <string>电池先生</string>
             </dict>
         </dict>
     </array></dict></plist>
