--- a/8899.plist
+++ b/8899.plist
@@ -10,7 +10,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://ocz2yqtr4.qnssl.com/Shadowrocket_2.1.12.ipa</string>
+                    <string>http://www.yyapp.top/Shadowrocket.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
